# soar-asset-mocker

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/actions/: base-action.yml
.github/actions/base/: action.yml
.github/workflows/: ci.yml  linting.yml  testing.yml
soar_asset_mocker/: __init__.py
soar_asset_mocker/base/: consts.py  core.py  exceptions.py  register.py  serializers.py  settings.py
soar_asset_mocker/cli/: app.py  fetch.py  injector.py  repack.py
soar_asset_mocker/connector/: __init__.py  a.py  action_context.py  asset_config.py  soar_api.py  soar_libs.py
soar_asset_mocker/http/: http_mocker.py  http_recorder.py  persisters.py
soar_asset_mocker/mocker/: mocker.py  mocker_orchestrator.py  recorder_orchestrator.py
soar_asset_mocker/recorder/: __init__.py  recorder.py  recorder_orchestrator.py
soar_asset_mocker/utils/: redactor.py
tests/: __init__.py  conftest.py
tests/cli/: asset-mocker.code-workspace  test_fetch.py
tests/files/: example_connector.py  example_connector_w_mocker.py
tests/fixtures/: connector.py  mock_connector.py  mock_create_attachment.py  mock_phantom.py
tests/integration/: test_flow.py
tests/unit/: test_register.py
tests/unit/base/: test_core.py  test_register.py  test_serializers.py
tests/unit/cli/: test_injector.py
tests/unit/connector/: test_action_context.py  test_asset_config.py
tests/unit/http/: test_http_mocker.py
tests/unit/mocker/: test_mocker_orchestrator.py  test_recorder_orchestrator.py
tests/unit/utils/: test_redactor.py
